pull updated translations from transifex

--- a/locale/es/LC_MESSAGES/extensions/requirements.po
+++ b/locale/es/LC_MESSAGES/extensions/requirements.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Open Contracting Data Standard for Public Private Partnerships 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-31 17:41+0100\n"
+"POT-Creation-Date: 2017-08-29 14:31+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Ben Webb <ben.webb@opendataservices.coop>, 2017\n"
+"Last-Translator: Oscar Montiel <oscar.montiel@okfn.org>, 2017\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/74632/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -165,7 +165,7 @@ msgstr "Antecedentes"
 #: ../docs/extensions/requirements.md:40
 msgid ""
 "There are number of scenarios in which structured information on "
-"requirements is neccessary. See discussion in Github issue "
+"requirements is necessary. See discussion in GitHub issue "
 "[#223](https://github.com/open-contracting/standard/issues/223)."
 msgstr ""
 "Hay una serie de escenarios en los es necesaria la información estructurada "
